# NAvadaOpportunities

./: .env  NAVADA_PROJECT_PLAN.md  PROJECT_PLAN.md  README.md  package.json
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: cv_parser.py  job_matcher.py  main.py  notification_service.py  profile_manager.py
docs/: ARCHITECTURE.md  SETUP.md  TECH_STACK.md
frontend/: .env  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: CVUpload.tsx  JobMatches.tsx  NotificationTest.tsx  SlackConfig.tsx
frontend/src/components/ui/: chart.tsx
frontend/src/lib/: api.ts  supabase.ts
frontend/src/triggers/: job_notification.trigger.ts  webhook.trigger.ts
frontend/src/types/: files.ts
frontend/src/workflows/: job_notification.ts
src/: App.tsx  index.css
supabase/migrations/: 20250108150513_purple_star.sql
